curabox/force-app/main/default/objects/Contact/fields/Produktgruppe__c.field-meta.xml
<CustomField>
    <fullName>Produktgruppe__c</fullName>
    <description>Bitte auswählen wofür sich der potentielle Kunde interessiert</description>
    <inlineHelpText>Bitte auswählen wofür sich der potentielle Kunde interessiert</inlineHelpText>
    <label>Produktgruppe</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PG54</fullName>
            </value>
            <value>
                <fullName>PG51</fullName>
            </value>
            <value>
                <fullName>Inko</fullName>
            </value>
            <value>
                <fullName>Shop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>