curabox/force-app/main/default/objects/Contact/fields/Recipe_available__c.field-meta.xml
<CustomField>
    <fullName>Recipe_available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rezept vorhanden</label>
    <type>Checkbox</type>
</CustomField>