curabox/force-app/main/default/objects/Contact/fields/responsible_for_text__c.field-meta.xml
<CustomField>
    <fullName>responsible_for_text__c</fullName>
    <description>Badumbau - Kostenträger + Vermieter</description>
    <label>Zuständigkeit</label>
    <length>128</length>
    <type>Text</type>
</CustomField>