curabox/force-app/main/default/objects/Contact/fields/Salutation_Text_Curabox__c.field-meta.xml
<CustomField>
    <fullName>Salutation_Text_Curabox__c</fullName>
    <formula>if ( ISPICKVAL( Salutation , &apos;Herr&apos;),
&apos;Lieber Herr &apos;,
if ( ISPICKVAL( Salutation , &apos;Frau&apos;),
&apos;Liebe Frau &apos;,
&apos;Sehr geehrte Damen und Herren&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Anrede Text Curabox</label>
    <type>Text</type>
</CustomField>