curabox/force-app/main/default/objects/Contact/fields/Schutzschuerzen_quantity__c.field-meta.xml
<CustomField>
    <fullName>Schutzschuerzen_quantity__c</fullName>
    <label>Schutzschürzen</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>