curabox/force-app/main/default/objects/Contact/fields/ShowButtonFormularErhalten__c.field-meta.xml
<CustomField>
    <fullName>ShowButtonFormularErhalten__c</fullName>
    <formula>NOT(ISBLANK( Birthdate )) &amp;&amp; NOT(ISBLANK(  Versicherungsnummer__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ShowButtonFormularErhalten</label>
    <type>Checkbox</type>
</CustomField>