curabox/force-app/main/default/objects/Contact/fields/Sonstige_Krankheiten__c.field-meta.xml
<CustomField>
    <fullName>Sonstige_Krankheiten__c</fullName>
    <label>Sonstige Krankheiten</label>
    <type>TextArea</type>
</CustomField>