curabox/force-app/main/default/objects/Contact/fields/sonstige_Medikamente__c.field-meta.xml
<CustomField>
    <fullName>sonstige_Medikamente__c</fullName>
    <label>sonstige Medikamente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>