curabox/force-app/main/default/objects/Contact/fields/Stakeholder__c.field-meta.xml
<CustomField>
    <fullName>Stakeholder__c</fullName>
    <description>Stakeholder Rolle im Buying Center der Ambulanten Dienste</description>
    <inlineHelpText>Stakeholder Rolle im Buying Center der Ambulanten Dienste</inlineHelpText>
    <label>Stakeholder</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Buyer</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
            <value>
                <fullName>Decider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>