curabox/force-app/main/default/objects/Contact/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Interessent</fullName>
            </value>
            <value>
                <fullName>Kandidat</fullName>
            </value>
            <value>
                <fullName>Kunde</fullName>
            </value>
            <value>
                <fullName>Kündigung</fullName>
            </value>
            <value>
                <fullName>Vorgang geschlossen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>