curabox/force-app/main/default/objects/Contact/fields/Status_PG54__c.field-meta.xml
<CustomField>
    <fullName>Status_PG54__c</fullName>
    <label>Status PG54</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Interessent</fullName>
            </value>
            <value>
                <fullName>Kandidat</fullName>
            </value>
            <value>
                <fullName>Kunde</fullName>
            </value>
            <value>
                <fullName>Kündigung</fullName>
            </value>
            <value>
                <fullName>Vorgang geschlossen</fullName>
            </value>
            <value>
                <fullName>Formular unerwünscht</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>