curabox/force-app/main/default/objects/Contact/fields/Street_Name__c.field-meta.xml
<CustomField>
    <fullName>Street_Name__c</fullName>
    <description>to separate the street name from house number for structured email tool</description>
    <label>Street Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>