curabox/force-app/main/default/objects/Contact/fields/Suchfeld_KundenNr__c.field-meta.xml
<CustomField>
    <fullName>Suchfeld_KundenNr__c</fullName>
    <label>Suchfeld_KundenNr</label>
    <length>50</length>
    <type>Text</type>
</CustomField>