curabox/force-app/main/default/objects/Contact/fields/Supplier_change__c.field-meta.xml
<CustomField>
    <fullName>Supplier_change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wechsel von anderem Versorger</label>
    <type>Checkbox</type>
</CustomField>