curabox/force-app/main/default/objects/Contact/fields/Supplier_change_startdate__c.field-meta.xml
<CustomField>
    <fullName>Supplier_change_startdate__c</fullName>
    <label>Wechsel von anderem Versorger Start</label>
    <type>Date</type>
</CustomField>