curabox/force-app/main/default/objects/Contact/fields/Telefonnummer_Hausarzt__c.field-meta.xml
<CustomField>
    <fullName>Telefonnummer_Hausarzt__c</fullName>
    <label>Telefonnummer Hausarzt</label>
    <type>Phone</type>
</CustomField>