curabox/force-app/main/default/objects/Contact/fields/Tempor_res_Produkt_Mundschutz__c.field-meta.xml
<CustomField>
    <fullName>Tempor_res_Produkt_Mundschutz__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Klickt bitte diese Checkbox an, falls ihr im Rahmen des Workarounds mit der einmaligen Mundschutz-Lieferung ab dem 11.08 die Checkbox &quot;Temporäres Produkt nicht versenden&quot; angeklickt habt. So werde ich die Kontakte rückwirkend automatisch ändern können.</description>
    <inlineHelpText>Klickt bitte diese Checkbox an, falls ihr im Rahmen des Workarounds mit der einmaligen Mundschutz-Lieferung ab dem 11.08 die Checkbox &quot;Temporäres Produkt nicht versenden&quot; angeklickt habt. So werde ich die Kontakte rückwirkend automatisch ändern können.</inlineHelpText>
    <label>Temporäres Produkt Mundschutz</label>
    <type>Checkbox</type>
</CustomField>