curabox/force-app/main/default/objects/Contact/fields/Tracking_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Order_ID__c</fullName>
    <inlineHelpText>Tracking ID bei Online Leads.</inlineHelpText>
    <label>Tracking_Order_ID</label>
    <length>60</length>
    <type>Text</type>
</CustomField>