curabox/force-app/main/default/objects/Contact/fields/Ursprungsanfrage__c.field-meta.xml
<CustomField>
    <fullName>Ursprungsanfrage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ursprungsanfrage</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>