curabox/force-app/main/default/objects/Contact/fields/Vermieter__c.field-meta.xml
<CustomField>
    <fullName>Vermieter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vermieter</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>BAD - Vermieter</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts (Vermieter)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>