curabox/force-app/main/default/objects/Contact/fields/Versichertenstatus__c.field-meta.xml
<CustomField>
    <fullName>Versichertenstatus__c</fullName>
    <description>Wie ist der Kunde versichert</description>
    <inlineHelpText>Wie ist der Kunde versichert?</inlineHelpText>
    <label>Versichertenstatus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gesetzlich</fullName>
            </value>
            <value>
                <fullName>Privat</fullName>
            </value>
            <value>
                <fullName>Gesetzlich + ZV</fullName>
            </value>
            <value>
                <fullName>Privat + ZV</fullName>
            </value>
            <value>
                <fullName>Anderer Kostenträger/ Sozialamt</fullName>
            </value>
            <value>
                <fullName>Selbstzahler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>