curabox/force-app/main/default/objects/Contact/fields/Versichertenstatus_bei_KK__c.field-meta.xml
<CustomField>
    <fullName>Versichertenstatus_bei_KK__c</fullName>
    <formula>TEXT( Kranken_Pflegekasse__r.Kanal_Unterpunkt__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Versichertenstatus</label>
    <type>Text</type>
</CustomField>