curabox/force-app/main/default/objects/Contact/fields/Versicherungsnummer__c.field-meta.xml
<CustomField>
    <fullName>Versicherungsnummer__c</fullName>
    <label>Versicherten Nummer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>