curabox/force-app/main/default/objects/Contact/fields/Vinyl_Allergy__c.field-meta.xml
<CustomField>
    <fullName>Vinyl_Allergy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vinyl Allergie</label>
    <type>Checkbox</type>
</CustomField>