curabox/force-app/main/default/objects/Contact/fields/von__c.field-meta.xml
<CustomField>
    <fullName>von__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Zu welcher Person steht der Kontakt in Relation ?</description>
    <inlineHelpText>Zu welcher Person steht der Kontakt in Relation ?</inlineHelpText>
    <label>von</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>