curabox/force-app/main/default/objects/Contact/fields/Vorherige_Anfrage__c.field-meta.xml
<CustomField>
    <fullName>Vorherige_Anfrage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity ID aus der Lead, falls konvertiert.</description>
    <label>Vorherige Anfrage</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>