curabox/force-app/main/default/objects/Contact/fields/welfare_recipient__c.field-meta.xml
<CustomField>
    <fullName>welfare_recipient__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sozialhilfeempfänger</label>
    <type>Checkbox</type>
</CustomField>