curabox/force-app/main/default/objects/Contact/fields/without_temp_product__c.field-meta.xml
<CustomField>
    <fullName>without_temp_product__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Haken gesetzt: Automatische Produkte gehen nicht raus!

Haken nicht gesetzt: Beim Erstellen des Lieferscheins werden automatisch 1x MS (10 Stck) und 1x FFP2 (3 Stck) hinzugefügt.</inlineHelpText>
    <label>Temporäre Produkte NICHT versenden</label>
    <type>Checkbox</type>
</CustomField>