curabox/force-app/main/default/objects/Contact/fields/WorkAroudTemplate27aBirthday__c.field-meta.xml
<CustomField>
    <fullName>WorkAroudTemplate27aBirthday__c</fullName>
    <description>This field is a workaround for the Badumbau Template 27a and can stay invisible.</description>
    <formula>TEXT(DAY( Birthdate ))+&quot;.&quot; +TEXT(MONTH(Birthdate ))+&quot;.&quot; +TEXT(YEAR(Birthdate ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WorkAroudTemplate27aBirthday</label>
    <type>Text</type>
</CustomField>