curabox/force-app/main/default/objects/Contact/fields/WorkAroundTemplatesAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>WorkAroundTemplatesAccountNumber__c</fullName>
    <formula>Account.Familien_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WorkAroundTemplatesAccountNumber</label>
    <type>Text</type>
</CustomField>