curabox/force-app/main/default/objects/Contact/fields/Wunschbox__c.field-meta.xml
<CustomField>
    <fullName>Wunschbox__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The curabox requested by the customer.</description>
    <inlineHelpText>Hier ist die gewünschte Box des Kunden auszuwählen.</inlineHelpText>
    <label>Wunschbox</label>
    <referenceTo>curabox__c</referenceTo>
    <relationshipLabel>Kontakte</relationshipLabel>
    <relationshipName>Kontakte</relationshipName>
    <type>Lookup</type>
</CustomField>