curabox/force-app/main/default/objects/Contact/fields/XXX_Antrag_bewilligt_abgelehnt_am__c.field-meta.xml
<CustomField>
    <fullName>XXX_Antrag_bewilligt_abgelehnt_am__c</fullName>
    <description>Dieses Datum sollte wenn vermutlich aus der Genehmigung gespeichert werden</description>
    <inlineHelpText>Datum der Antragsgenehmigung bzw. - Ablehnung</inlineHelpText>
    <label>XXX Antrag bewilligt/abgelehnt am</label>
    <type>Date</type>
</CustomField>