curabox/force-app/main/default/objects/Contact/fields/XXX_K_ndigung_am__c.field-meta.xml
<CustomField>
    <fullName>XXX_K_ndigung_am__c</fullName>
    <label>XXX Kündigung am</label>
    <type>Date</type>
</CustomField>