curabox/force-app/main/default/objects/Contact/fields/Zust_ndigkeit__c.field-meta.xml
<CustomField>
    <fullName>Zust_ndigkeit__c</fullName>
    <label>Zuständigkeit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PG 51</fullName>
            </value>
            <value>
                <fullName>PG 54</fullName>
            </value>
            <value>
                <fullName>PG 51 + 54</fullName>
            </value>
            <value>
                <fullName>Aufmaßkoordinierung</fullName>
            </value>
            <value>
                <fullName>Kostenvoranschläge</fullName>
            </value>
            <value>
                <fullName>Umbauten</fullName>
            </value>
            <value>
                <fullName>Stornos</fullName>
            </value>
            <value>
                <fullName>Aufmaße</fullName>
            </value>
            <value>
                <fullName>Umbaukoordinierung</fullName>
            </value>
            <value>
                <fullName>Sonderfälle/Kundenreklamation</fullName>
            </value>
            <value>
                <fullName>Abrechnungen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>