curabox/force-app/main/default/objects/Contact/fields/Zuzahlungsbefreit_Nein__c.field-meta.xml
<CustomField>
    <fullName>Zuzahlungsbefreit_Nein__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Zuzahlungsbefreit „Nein“</label>
    <type>Checkbox</type>
</CustomField>