curabox/force-app/main/default/objects/Contact/recordTypes/Bewerber.recordType-meta.xml
<RecordType>
    <fullName>Bewerber</fullName>
    <active>true</active>
    <description>Bewerber auf von pflege.de veröffentlichte Jobs</description>
    <label>Bewerber</label>
</RecordType>