curabox/force-app/main/default/objects/Contact/recordTypes/Familienangeh_rige.recordType-meta.xml
<RecordType>
    <fullName>Familienangeh_rige</fullName>
    <active>true</active>
    <description>Angehörige einer Pflege.de Familie</description>
    <label>Familienangehörige</label>
</RecordType>