curabox/force-app/main/default/objects/Contact/recordTypes/Partnerkontakte.recordType-meta.xml
<RecordType>
    <fullName>Partnerkontakte</fullName>
    <active>true</active>
    <description>Ansprechpartner von pflege.de Partnern</description>
    <label>Partnerkontakte</label>
</RecordType>