curabox/force-app/main/default/objects/Contact/validationRules/Privatversicherte.validationRule-meta.xml
<ValidationRule>
    <fullName>Privatversicherte</fullName>
    <active>true</active>
    <errorConditionFormula>Versichertenstatus_bei_KK__c = &apos;privat&apos; &amp;&amp; Beihilfeberechtigt__c = true</errorConditionFormula>
    <errorDisplayField>Beihilfeberechtigt__c</errorDisplayField>
    <errorMessage>Privatversicherte können nicht als Beihilfeberechtigt gespeichert werden.</errorMessage>
</ValidationRule>